# frugal

./: .gitignore  Cargo.toml  dockerfile  readme.md
.github/workflows/: checkPr.yml  deployDev.yml  deployPrd.yml  deployProd.yml
assets/css/: main.css
config/: default.toml
src/: cmd.rs  commands.rs  core.rs  infra.rs  main.rs  module.rs  web.rs
src/api/: http.rs  web.rs
src/api/http/: cmd.rs  home.rs  server.rs  template.rs
src/api/web/: cmd.rs  home.rs  money.rs  price.rs  server.rs
src/cmd/: price.rs
src/cmd/price/: scale.rs
src/commands/: compound.rs  convert.rs  register_expense.rs  scale.rs
src/core/: money.rs  price.rs
src/core/money/: compound.rs  convert.rs
src/core/price/: scale.rs
src/infra/: config.rs  cosmos.rs  error.rs  logger.rs
src/module/: cmd.rs  money.rs  price.rs
src/module/cmd/: list.rs  web.rs
src/module/money/: compound.rs  convert.rs  money_type.rs  util.rs  web.rs
src/module/price/: compare.rs  index.rs  scale.rs  web.rs
src/money/: common.rs  convert.rs  web.rs
src/util/: money.rs
src/web/: cmd.rs  expense.rs  home.rs  money.rs  price.rs  server.rs
templates/: base.html  home.html  output.html
templates/cmd/: list.html
templates/comps/: base.html  footer.html  frame.html  header.html  output.html
templates/expense/: register.html  register_out.html
templates/money/: compound.html  compound_out.html  convert.html  convert_in.html  convert_out.html
templates/price/: index.html  scale.html  scale_in.html  scale_out.html
tests/money/: compound_tests.rs
tests/unit/: money.rs
